Consolidated navbar to make site look cleaner

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img src="img/triathlonLogo.png"></a>
+      <a class="navbar-brand" href="rutgerstriathlon.com"><img src="img/triathlonLogo.png"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -17,9 +17,14 @@
         <!-- <li id="homeNavBarItem" class="active"><a href="/index.html">Home<span class="sr-only">(current)</span></a></li> -->
         <li id="indoortriNavBarItem"><a href="RU_indoortriathlon.html">Indoor Triathlon</a>
         <li id="joinNavBarItem"><a href="join.html">Join</a></li>
-        <li id="officersNavBarItem"><a href="officers.html">Officers</a></li>
-        <li id="aboutNavBarItem"><a href="about.html">About Us</a></li>
-        <li id="sponsorNavBarItem"><a href="sponsors.html">Sponsors</a></li>
+        <li id="membersNavBarItem" class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">About Us<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li id="aboutNavBarItem"><a href="about.html">Our Story</a></li>
+              <li id="officersNavBarItem"><a href="officers.html">Officers</a></li>
+              <li id="sponsorNavBarItem"><a href="sponsors.html">Sponsors</a></li>
+            </ul>
+        </li>
         <li id="membersNavBarItem" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Members<span class="caret"></span></a>
           <ul class="dropdown-menu">
