Updated Officers Page: Uploaded new pic of Stephen and removed Ray with Cody for Webmaster. Also added 'Photgrapher' position for Cody

--- a/_includes/officersList.html
+++ b/_includes/officersList.html
@@ -46,16 +46,21 @@
 
     <div class ="col-md-4">
     <div class="panel panel-danger right">
-        <div class="panel-heading"><img class="media-object" src="img/stephenmarciniak.png"/><p></br><b>Stephen Marciniak</b></br>Practice Captain </br>Race Coordinator</p></div>
+        <div class="panel-heading"><img class="media-object" src="img/MarciniakExitWater.jpg"/><p></br><b>Stephen Marciniak</b></br>Practice Captain </br>Race Coordinator</p></div>
     </div>
     </div>
 
     <div class ="col-md-12"></div>
     <div class ="col-md-4">
     <div class="panel panel-danger left">
-        <div class="panel-heading"><img class="media-object" src="img/RaymondFullon.png"/><p></br><b>Raymond Fullon</b></br>Webmaster</p></div>
-        <div class="panel-body">
-              <p>I first got into triathlon in Austin, Texas which has a thriving triathlon culture. After getting over the shock, I eventually got used to the demand of multisport training and have raced several triathlons so far. Once getting to Rutgers, I couldn't resist joining the Rutgers Triathlon Team and their welcoming and encouraging members!</p>
+        <div class="panel-heading">
+          <a href = "http://codyconroy.com"> <img class="media-object" src="img/conroyOfficer-2.jpg"/> </a> <p></br><b>Cody Conroy</b></br>Photographer and Webmaster</p></div>
+          <div class="panel-body">
+              <p>I have basically always been a water guy. I wanted to join the
+              Navy in high school, and that resulted in me joining the swim
+              team (although I could not swim.) I got pretty good at swimming,
+              and since I like bikes, I figured I might as well add running to get
+              the full trio.</p>
         </div>
     </div>
     </div>
