--- a/_includes/pracContent.html
+++ b/_includes/pracContent.html
@@ -14,158 +14,57 @@
 	</br>
 <p>Be sure to check the facebook group for smaller group practices that aren't regularly scheduled.</p>
 <h2>Fall 2018</h2></br>
-<p> Coming soon!</p>
 
-<h2>Spring 2018</h2></br>
-
-<h3><b>Sunday</b></h3>
+<h3><b> Monday </b></h3>
+  </br>
   <p>
-    1:00 PM - Baby Brick </br>
-    <b>See <a href="https://www.facebook.com/groups/rutgerstriteam/">FB page</a></b>
+    <b style="color: #cc0033;">What: </b> Swim </br>
+    <b style="color: #cc0033;">When: </b> 8:30 PM </br>
+    <b style="color: #cc0033;">Where: </b> Cook Douglass Recreation Center </br></br>
   </p>
 
-  <h3><b>Monday</b></h3>
-  <p>8:30 - 10:00PM - Swim at Cook Recreation Center</br>
-    <b>PC:</b> Drew
-  </p>
-
-  <h3><b>Tuesday</b></h3>
-  <p>9:00 11:00 PM - (bike) Trainer Tuesdays at Livingston Gym</br>
-    <b>PC:</b> Tyler
-  </p>
-
-  <h3><b>Wednesday</b></h3>
-  <p>8:30 - 10:00PM - Swim at Cook Recreation Center</br>
-    <b>PC:</b> Drew
-  </p>
-
-  <h3><b>Thursday</b></h3>
-  <p>5:30 PM - Track Run at University Park (Across from Werblin)</br>
-    <b>PC:</b> Stephen
-
-  <h3><b>Friday</b></h3>
-  <p>5:30 PM - Long Run out of University Park (Across from Werblin)</br>
-    <b>PC:</b> Stephen
-  </p>
-
-  <h3><b>Saturday</b></h3>
-  <p>Organized on FB</br>
-  </p>
-
-<h2>Fall 2017</h2></br>
-
-<h3><b>Sunday</b></h3>
+<h3><b> Tuesday </b></h3>
+  </br>
   <p>
-    Organized on FB
+    <b style="color: #cc0033;">What: </b> Run </br>
+    <b style="color: #cc0033;">When: </b> 6:30 PM </br>
+    <b style="color: #cc0033;">Where: </b> University Park, Busch Campus </br></br>
   </p>
 
-  <h3><b>Monday</b></h3>
-  <p>8:30 - 10:00PM - Swim at Cook Recreation Center</br>
-    <b>PC:</b> Liz
-  </p>
-
-  <h3><b>Tuesday</b></h3>
-  <p>6:30PM - Track Workout at University Park across from Werblin Recreation Center</br>
-    <b>PC:</b> Dennis
-  </p>
-
-  <h3><b>Wednesday</b></h3>
-  <p>8:30 - 10:00PM - Swim at Cook Rec Center</br>
-    <b>PC:</b> Liz
-  </p>
-
-  <h3><b>Thursday</b></h3>
-  <p>TBD - Bike/Spin (Bike rides for now)</br>
-    <b>PC:</b> Dennis
-
-  <h3><b>Friday</b></h3>
-  <p>4:00PM - Long Run out of Werblin</br>
-    <b>PC:</b> Dennis
-  </p>
-
-  <h3><b>Saturday</b></h3>
-  <p>Organized on FB</br>
-  </p>
-
-  <h2>Spring 2017</h2></br>
-
-
-  <h3><b>Sunday</b></h3>
+<h3><b> Wednesday </b></h3>
+  </br>
   <p>
-    Organized on the Facebook group
+    <b style="color: #cc0033;">What: </b> Swim </br>
+    <b style="color: #cc0033;">When: </b> 8:30 PM </br>
+    <b style="color: #cc0033;">Where: </b> Cook Douglass Recreation Center </br></br>
   </p>
 
-  <h3><b>Monday</b></h3>
-  <p>8:30 - 10:00PM - Swim at Cook Recreation Center</br>
-    <b>PC:</b> Casey
-  </p>
-
-  <h3><b>Tuesday</b></h3>
-  <p>6:00PM - Indoor Ride at Livingston Recreation Center</br>
-    <b>PC:</b> Dennis & Liz
-  </p>
-
-  <h3><b>Wednesday</b></h3>
-  <p>8:30 - 10:00PM - Swim at Cook Rec Center</br>
-    <b>PC:</b> Chelsie & Liz
-  </p>
-
-  <h3><b>Thursday</b></h3>
-  <p>12:00PM - Run at the track (Livi OR Werblin) </br>
-    <b>PC: </b>Colin
-  </p>
-  <p>9:00 - 10:00PM - Swim at Werblin</br>
-    <b>PC:</b> Liz & Dennis</b>
-  </p>
-
-  <h3><b>Friday</b></h3>
-  <p>12:00PM - Long Run out of Werblin</br>
-    <b>PC:</b> All Officers
-  </p>
-
-  <h3><b>Saturday</b></h3>
-  <p>Organized on FB</br>
-  </p>
-
-  <h2>Fall 2016</h2></br>
-
-  <h3><b>Sunday</b></h3>
+<h3><b> Thursday </b></h3>
+  </br>
   <p>
-    Bike ride or long runs organized on the Facebook group
+    <b style="color: #cc0033;">What: </b> Bike (Spin) </br>
+    <b style="color: #cc0033;">When: </b> 8:30 PM </br>
+    <b style="color: #cc0033;">Where: </b> Werblin Recreation Center, Busch Campus </br></br>
   </p>
 
-  <h3><b>Monday</b></h3>
-  <p>8:30 - 10:00PM - Swim at Cook Recreation Center</br>
-    <b>PC:</b> Kyle, Liz & Sarah
-  </p>
-
-  <h3><b>Tuesday</b></h3>
-  <p>5:00 - 6:00PM - Run at University Park across from Werblin Recreation Center</br>
-    <b>PC:</b> Nikki, Tina & Kyle
-  </p>
-
-  <h3><b>Wednesday</b></h3>
-  <p>8:30 - 10:00PM - Swim at Cook Rec Center</br>
-    <b>PC:</b> Jess & Casey
-  </p>
-
-  <h3><b>Thursday</b></h3>
-  <p>RU Fit Class; check the Facebook group
-  </p>
-
-  <h3><b>Friday</b></h3>
-  <p>8:00 - 9:00AM - Swim at Werblin Recreation Center</br>
-    <b>PC:</b> Jess & Jason
-  </p>
-
-  <h3><b>Saturday</b></h3>
-  <p>Early morning outdoor cycling ride</br>
-    <b>PC:</b> Kyle & Tina
-  </p>
-</br>
+<h3><b> Friday </b></h3>
+  </br>
   <p>
-    <b>*PC</b> = Practice Captain
+    <b style="color: #cc0033;">What: </b> Run </br>
+    <b style="color: #cc0033;">Where: </b> College Avenue Student Center </br>
+    <b style="color: #cc0033;">When: </b> 10:00 AM </br>
   </p>
+
+<h3><b> Saturday </b></h3>
+  </br>
+  <p>
+    <b style="color: #cc0033;">What: </b> Bike (Group Ride) </br>
+    <b style="color: #cc0033;">Where: </b> Pop's Bike Shop </br>
+      <a href = "https://www.google.com/maps/place/Pops+Bike+Shop/@40.5677677,-74.5420989,17z/data=!3m1!4b1!4m5!3m4!1s0x89c3bf71282d7151:0x6accfc9b8075bd10!8m2!3d40.5677636!4d-74.5399102"> <ul style = "list-style-image: url('img/gpsPin.jpg');"> </a>
+        <li>227 W Union Ave, Bound Brook, NJ 08805</li>
+      </ul>
+    <p><b style="color: #cc0033;">When: </b> 8:00 AM </p></br>
+  </p>
+
   </div><!-- panelBody -->
-</div>
 </div>
