--- a/css/main.css
+++ b/css/main.css
@@ -43,8 +43,8 @@ h1 {
 }
 .carousel .item img{
     margin: 0 auto;
-    height: 600px;
-    width: auto;
+    height: auto;
+    width: 1000px;
 }
 
 /************
